--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/icons": "^6.0.0",
+    "@emailjs/browser": "^4.4.1",
     "antd": "^5.24.9",
     "emailjs-com": "^3.2.0",
     "framer-motion": "^12.9.4",
