--- a/package.json
+++ b/package.json
@@ -16,11 +16,17 @@
     "@mui/icons-material": "^7.1.0",
     "@mui/material": "^7.1.0",
     "antd": "^5.24.9",
+    "classnames": "^2.5.1",
+    "country-state-city": "^3.2.1",
     "emailjs-com": "^3.2.0",
     "framer-motion": "^12.9.4",
     "next": "15.3.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-google-recaptcha": "^3.1.0",
+    "react-hook-form": "^7.57.0",
+    "react-phone-input-2": "^2.15.1",
+    "react-select": "^5.10.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
