--- a/package.json
+++ b/package.json
@@ -20,13 +20,16 @@
     "country-state-city": "^3.2.1",
     "emailjs-com": "^3.2.0",
     "framer-motion": "^12.9.4",
+    "gray-matter": "^4.0.3",
     "next": "15.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.57.0",
     "react-phone-input-2": "^2.15.1",
-    "react-select": "^5.10.1"
+    "react-select": "^5.10.1",
+    "remark": "^15.0.1",
+    "remark-html": "^16.0.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
