feat: lms subdomain pointing to login page

--- a/vercel.json
+++ b/vercel.json
@@ -8,7 +8,7 @@
           "value": "lms.thinqchess.com"
         }
       ],
-      "destination": "https://thinqchess.com/tournaments",
+      "destination": "https://thinqchess.com/training",
       "permanent": true
     }
   ]
